<resources>
    <string name="app_name">Jinshashan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--Action bar-->
    <string name="action_sort">Sort By</string>
    <string name="action_search">Search</string>

    <!--Default text-->
    <string name="coming_soon_text">Stay tight, it\'s coming soon!!</string>
    <string name="not_available">N/A</string>
    <string name="no_data_found">No data available. Please try again later.</string>

    <!-- Activity title text. -->
    <string name="title_activity_jndetail">Namo Loye Savv Sahunam</string>
    <string name="title_activity_jnfavorites">Favorites</string>
    <string name="title_activity_jntake_avow">Take A Vow Today</string>
    <string name="title_activity_jnabout_us">About Us</string>

    <!--Labels-->

    <!--Section titles-->
    <string name="section_title_diksha_info">Diksha Info</string>
    <string name="section_title_personal_info">Personal Info</string>
    <string name="section_title_recent_info">Recent Info</string>

    <!--Diksha info labels-->
    <string name="diksha_date">Diksha Date</string>
    <string name="diksha_place">Diksha Place</string>
    <string name="diksha_guru">Diksha Guru</string>

    <!--Personal info labels-->
    <string name="full_name">Full Name</string>
    <string name="father_name">Father\'s Name</string>
    <string name="mother_name">Mother\'s Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="birth_place">Birth Place</string>

    <!--Recent info labels-->
    <string name="address">Address</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_phone_no">Contact Phone No</string>
    <string name="contact_email_id">Contact Email ID</string>
    <string name="last_update">Last Update</string>

    <!--Common labels-->
    <string name="remarks">Remarks</string>
    <string name="appwidget_text">JINSHASHAN</string>

    <!--Accessibility text-->
    <string name="hero_image_content_desc">Hero image</string>
    <string name="favorite_button_content_desc">Favorite</string>
    <string name="nav_sadhus_title">Sadhus</string>
    <string name="nav_sadhvis_title">Sadhvis</string>
    <string name="nav_favorites_title">Favorites</string>
    <string name="nav_take_a_vow_title">Take a vow</string>
    <string name="nav_communicate_title">Communicate</string>
    <string name="nav_share_title">Share</string>
    <string name="nav_send_feedback_title">Send feedback</string>
    <string name="nav_contact_us">Contact us</string>
    <string name="nav_about">About</string>

    <!--Email defaults-->
    <string name="email_recipient">swapnilabad@gmail.com</string>
    <string name="email_subject">Jinshashan - Feedback</string>
    <string name="email_text">Jai Jinendra</string>
    <string name="email_title">Send feedback</string>

    <!--Dialogs-->
    <string name="ok_text">OK</string>
    <string name="about_us_text">
        Jai Jinendra,

        \n\nOur vision is to consolidate all our Jain Sadhu and Sadhvis information and make it
        available for everyone within this app.

        \n\nWe extend our thanks to \"jainmunilocator.org\" for providing us
        Digambar Sadhu and Sadhvis information.

        \n \nOur users are our source of information. If you have the most recent information
        available about Jain Sadhu or Sadhvis, Please email us at \'swapnilabad@gmail.com\' or
        update Digambar muni information at \"www.jainmunilocator.org\".

        \n\nLooking forward for your contribution!!

        \n\nThank you,
        \nJinshashan Admin
    </string>
    <string name="contact_us_text">
        Should you have any questions, concerns or suggestions. Kindly email us at
        \'swapnilabad@gmail.com\'.
    </string>

    <!-- Take a vow -->
    <string name="try_it_out">Try it out!</string>
    <string name="max_attempts_tried_msg">You\'ve made all 3 attempts today, try again tomorrow!</string>
    <string name="max_attempts_allowed_msg">Max 3 attempts are allowed.</string>
    <string name="vow_accepted_dialog_title">Thank you</string>
    <string name="vow_accepted_dialog_message">
        Thank you for taking a Vow today using Jinshashan app. See you tomorrow.
    </string>

    <!-- Button titles -->
    <string name="generate_a_vow">Generate a new vow</string>
    <string name="accept_this_vow">I accept this vow</string>
    <string name="regenerate_a_vow">Regenerate a new vow</string>
</resources>
